Use $.Callbacks instead of InvokeGroup

--- a/test/vui-001.html
+++ b/test/vui-001.html
@@ -31,18 +31,23 @@ body{
 	height: 50px;
 }
 [vui-type="move"]{
-	left: 13px;
-	right: 13px;
-	top: 13px;
-	bottom: 13px;
+	left: 10px;
+	right: 10px;
+	top: 10px;
+	bottom: 10px;
 	background-color: #f00;
 }
 [vui-type="resize"]{
-	right: 3px;
-	bottom: 3px;
+	right: 0px;
+	bottom: 0px;
 	width: 10px;
 	height: 10px;
 	background-color: #ff0;
+}
+
+.active{
+	background-color: #fa0;
+	z-index: 9999;
 }
 
 </style>
@@ -54,67 +59,13 @@ body{
 		<div vui-type="move"></div>
 		<div vui-type="resize"></div>
 	</div>
+	<div vui-type="container">
+		<div vui-type="move"></div>
+		<div vui-type="resize"></div>
+	</div>
 </div>
 
 <script type="text/javascript">
-function EACH(arr, callback){
-	var i = 0, r;
-	while(i < arr.length){
-		if(r = callback(arr[i], i, arr)) return r;
-		i++;
-	}
-	return undefined;
-};
-//InvokerGroup
-	function InvokerGroup(context){
-		this.callbacks = {};
-		this.context = context;
-	}
-	InvokerGroup.prototype = {
-		on: function(name, callback){
-			if(typeof(callback) != 'function') return;
-			if(!this.has(name)){
-				this.callbacks[name] = [];
-			}
-			this.callbacks[name].push(callback);
-			return this;
-		},
-		has: function(name){
-			return name in this.callbacks;
-		},
-		findIndex: function(name, f){
-			if(!this.has(name)) return -1;
-			return this.callbacks[name].findIndex(function(cb){
-				return cb === f;
-			});
-		},
-		no: function(name, cb){
-			var idx = this.findIndex(name, cb);
-			if(idx > -1){
-				this.callbacks[name].splice(idx, 1);
-				return true;
-			}
-		},
-		fire: function(name){
-			if(!this.has(name)){
-				return;
-			}
-			var args = Array.prototype.slice.call(arguments, 1);
-			var ctx = this.context;
-			var i = EACH(this.callbacks[name], function(cb, i){
-				return cb.apply(ctx, args);
-			});
-			return i;
-		},
-		dispose: function(){
-			EACH(this.callbacks, function(cbs, n, C){
-				cbs.splice(0, cbs.length);
-				delete C[n];
-			});
-			delete this.callbacks;
-		}
-	};
-
 
 //VUI Confiture
 	var VUI = {
@@ -168,18 +119,28 @@ function EACH(arr, callback){
 function VEditor(query){
 	var doc = $(document);
 	var P = $(query);
-	var events = new InvokerGroup(P);
 	var W_ = null, W
 		, widgetPos, mouseStartPos
 		, widgetWidth, widgetHeight
 		, widgetRect = {};
 		;
+	
+	var callbacks = {
+		'move': $.Callbacks(),
+		'resize': $.Callbacks(),
+		'active': $.Callbacks(),
+		'lost': $.Callbacks(),
+		'get': $.Callbacks(),
+		'run': $.Callbacks(),
+		'end': $.Callbacks()
+	}
 
 	function Move(e){
 		widgetRect.left = Math.min(P.width() - W.T.width(), Math.max(0, e.clientX - (mouseStartPos.left - widgetPos.left)));
 		widgetRect.top = Math.min(P.height() - W.T.height(), Math.max(0, e.clientY - (mouseStartPos.top - widgetPos.top)));
 		W.T.css(widgetRect);
-		events.fire('move', W.T, widgetRect);
+		callbacks['run'].fire(W.t, W.T, widgetRect);
+		callbacks['move'].fire(W.T, widgetRect);
 	}
 	function Resize(e){
 		var pos = UTIL.eventPosition(e);
@@ -188,36 +149,99 @@ function VEditor(query){
 		widgetRect.width = Math.min(P.width() - widgetPos.left, Math.max(0, widgetWidth + pos.left));
 		widgetRect.height = Math.min(P.height() - widgetPos.top, Math.max(0, widgetHeight + pos.top));
 		W.T.css(widgetRect);
-		events.fire('resize', W.T, widgetRect);
+		callbacks['run'].fire(W.t, W.T, widgetRect);
+		callbacks['resize'].fire(W.T, widgetRect);
 	}
 
 	P.bind(VUI.eventGetName, function(e){
 		e.stopPropagation();
 		W = Widget(e.target);
 		if(W){
-			widgetPos = W.T.position();
 			mouseStartPos = UTIL.eventPosition(e);
+
+			widgetPos = W.T.position();
+			widgetRect.left = widgetPos.left;
+			widgetRect.top = widgetPos.top;
+			widgetRect.width = W.T.width();
+			widgetRect.height = W.T.height();
+
+			if(!Widget.Equal(W, W_)){
+				callbacks['active'].fire(W.T, W_ ? W_.T : null);
+			}
+			callbacks['get'].fire(W.t, W.T, widgetRect);
 			switch(W.t){
+				case '.':
+					break;
 				case VUI.moveTypeName:
 					doc.bind(VUI.eventMoveName, Move);
 					break;
 				case VUI.resizeTypeName:
-					widgetWidth = W.T.width();
-					widgetHeight = W.T.height();
+					widgetWidth = widgetRect.width;
+					widgetHeight = widgetRect.height;
 					doc.bind(VUI.eventMoveName, Resize);
 					break;
+				default:
+					if(W.t in callbacks){
+						callbacks[T.t].fire(W.T, widgetRect);
+					}
+					break;
 			}
+			W_ = W;
+		} else if(W_) {
+			callbacks['lost'].fire(W_.T);
+			W = W_ = null;
+			return;
 		}
-		W_ = W;
 	});
 	doc.bind(VUI.eventEndName, function(e){
 		e.stopPropagation();
 		doc.unbind(VUI.eventMoveName, Move);
 		doc.unbind(VUI.eventMoveName, Resize);
+		if(W){
+			callbacks['end'].fire(W.t, W.T, widgetRect);
+		}
 	});
+
+	return {
+		on: function(name, fn){
+			if(!(name in callbacks)){
+				callbacks[name] = $.Callbacks();
+			}
+			callbacks[name].add(fn);
+		},
+		no: function(name, fn){
+			if(arguments.length < 1){
+				for(var p in callbacks){
+					callbacks[p].empty();
+				}
+			} else if(arguments.length == 1){
+				name in callbacks && callbacks[name].empty();
+			} else {
+				name in callbacks && callbacks[name].remove(fn);
+			}
+		}
+	};
 }
 
 var editor = VEditor('#panel');
+
+editor.on('get', function(type, w){
+	if(type != '.'){
+		w.css({opacity:0.5})
+	}
+});
+editor.on('end', function(type, w){
+	w.css({opacity:1})
+});
+
+editor.on('active', function(newW, oldW){
+	newW.addClass('active');
+	oldW && oldW.removeClass('active');
+});
+
+editor.on('lost', function(w){
+	w.removeClass('active');
+})
 
 
 </script>
