--- a/test/vui-001.html
+++ b/test/vui-001.html
@@ -122,7 +122,7 @@ function VEditor(query){
 	var W_ = null, W
 		, widgetPos, mouseStartPos
 		, widgetWidth, widgetHeight
-		, widgetRect = {};
+		, R = {};
 		;
 	
 	var callbacks = {
@@ -135,11 +135,11 @@ function VEditor(query){
 		'end': $.Callbacks()
 	};
 
-	// Object.observe(widgetRect, function(changes){
+	// Object.observe(R, function(changes){
 	// 	var css = {};
 	// 	changes.forEach(function(change){
 	// 		if(/(width|height|left|top)/.test(change.name)){
-	// 			css[change.name] = widgetRect[change.name];
+	// 			css[change.name] = R[change.name];
 	// 		}
 	// 	});
 	// 	console.log(css);
@@ -147,21 +147,21 @@ function VEditor(query){
 	// });
 
 	function Move(e){
-		widgetRect.left = Math.min(P.width() - W.T.width(), Math.max(0, e.clientX - (mouseStartPos.left - widgetPos.left)));
-		widgetRect.top = Math.min(P.height() - W.T.height(), Math.max(0, e.clientY - (mouseStartPos.top - widgetPos.top)));
-		W.T.css(widgetRect);
-		callbacks['run'].fire(W.t, W.T, widgetRect);
-		callbacks['move'].fire(W.T, widgetRect);
+		R.left = Math.min(P.width() - W.T.width(), Math.max(0, e.clientX - (mouseStartPos.left - widgetPos.left)));
+		R.top = Math.min(P.height() - W.T.height(), Math.max(0, e.clientY - (mouseStartPos.top - widgetPos.top)));
+		W.T.css(R);
+		callbacks['run'].fire(W.t, W.T, R);
+		callbacks['move'].fire(W.T, R);
 	}
 	function Resize(e){
 		var pos = UTIL.eventPosition(e);
 		pos.left -= mouseStartPos.left;
 		pos.top -= mouseStartPos.top;
-		widgetRect.width = Math.min(P.width() - widgetPos.left, Math.max(0, widgetWidth + pos.left));
-		widgetRect.height = Math.min(P.height() - widgetPos.top, Math.max(0, widgetHeight + pos.top));
-		W.T.css(widgetRect);
-		callbacks['run'].fire(W.t, W.T, widgetRect);
-		callbacks['resize'].fire(W.T, widgetRect);
+		R.width = Math.min(P.width() - widgetPos.left, Math.max(0, widgetWidth + pos.left));
+		R.height = Math.min(P.height() - widgetPos.top, Math.max(0, widgetHeight + pos.top));
+		W.T.css(R);
+		callbacks['run'].fire(W.t, W.T, R);
+		callbacks['resize'].fire(W.T, R);
 	}
 
 	P.bind(VUI.eventGetName, function(e){
@@ -171,15 +171,15 @@ function VEditor(query){
 			mouseStartPos = UTIL.eventPosition(e);
 
 			widgetPos = W.T.position();
-			widgetRect.left = widgetPos.left;
-			widgetRect.top = widgetPos.top;
-			widgetRect.width = W.T.width();
-			widgetRect.height = W.T.height();
+			R.left = widgetPos.left;
+			R.top = widgetPos.top;
+			R.width = W.T.width();
+			R.height = W.T.height();
 
 			if(!Widget.Equal(W, W_)){
 				callbacks['active'].fire(W.T, W_ ? W_.T : null);
 			}
-			callbacks['get'].fire(W.t, W.T, widgetRect);
+			callbacks['get'].fire(W.t, W.T, R);
 			switch(W.t){
 				case '.':
 					break;
@@ -187,13 +187,13 @@ function VEditor(query){
 					doc.bind(VUI.eventMoveName, Move);
 					break;
 				case VUI.resizeTypeName:
-					widgetWidth = widgetRect.width;
-					widgetHeight = widgetRect.height;
+					widgetWidth = R.width;
+					widgetHeight = R.height;
 					doc.bind(VUI.eventMoveName, Resize);
 					break;
 				default:
 					if(W.t in callbacks){
-						callbacks[T.t].fire(W.T, widgetRect);
+						callbacks[T.t].fire(W.T, R);
 					}
 					break;
 			}
@@ -209,7 +209,7 @@ function VEditor(query){
 		doc.unbind(VUI.eventMoveName, Move);
 		doc.unbind(VUI.eventMoveName, Resize);
 		if(W){
-			callbacks['end'].fire(W.t, W.T, widgetRect);
+			callbacks['end'].fire(W.t, W.T, R);
 		}
 	});
 
